<resources>
    <string name="app_name">CRUD</string>
    <string name="splashscreenIcon">splashScreenicon</string>
    <string name="notes_app">Notes App</string>
    <string name="by_n_idongesit_samuel">By\n Idongesit Samuel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_title">Note Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="subtitle">Subtitle</string>
    <string name="notes.......">Note</string>
    <string name="saveFab">saveFab</string>
    <string name="selectorGreen">Selector Green</string>
    <string name="selectorRed">Selector Green</string>
    <string name="selectorYellow">SelectorYellow</string>
    <string name="are_you_sure_you_want_to_delete_n_this_note">Are you sure you want to delete\n This Note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="filter_icon">filter icon</string>
    <string name="create_notes">Create Notes</string>
</resources>