<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="130dp"
        android:layout_height="10dp"
        android:background="#A8A8A8"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_note"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/dialog_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/yes_dialog"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/yes"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dialog_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/no_dialog"
        android:gravity="center"
        android:text="@string/no"
        android:textStyle="bold"/>


</LinearLayout>