<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_Color"
    tools:context=".ui.fragments.CreateNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <EditText
            android:id="@+id/createNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:background="@drawable/edit_txt_shape"
            android:textColorHint="#D1D1D1"
            app:boxBackgroundColor="#707070"
            android:hint="Title"
            app:hintTextColor="@color/white"
            android:inputType="text"/>


       <EditText
           android:id="@+id/createSubtitle"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@drawable/edit_txt_shape"
           android:textColorHint="#D1D1D1"
           android:hint="@string/subtitle"
           android:layout_marginTop="10dp"
           android:padding="15dp"
           android:inputType="text"
           android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/pGreen"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/green_dot"
                android:contentDescription="@string/selectorGreen" />

            <ImageView
                android:id="@+id/pRed"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/red_dot"
                android:contentDescription="@string/selectorRed" />

            <ImageView
                android:id="@+id/pYellow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/yellow_dot"
                android:contentDescription="@string/selectorYellow" />
        </LinearLayout>

       <EditText
           android:id="@+id/NoteDescription"
           android:layout_width="match_parent"
           android:layout_height="350dp"
           android:layout_marginTop="10dp"
           android:background="@drawable/edit_txt_shape"
           android:inputType="text"
           android:gravity="start"
           android:padding="15dp"
           android:textColorHint="#D1D1D1"
           android:hint="@string/notes......."/>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:src="@drawable/ic_done"
        android:backgroundTint="@color/AppBarColor"
        android:contentDescription="@string/saveFab">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>

</FrameLayout>