<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_Color"
    tools:context=".SplashScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splashContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="225dp"
            android:layout_height="223dp"
            android:contentDescription="@string/splashscreenIcon"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.639"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.261" />

        <TextView
            android:id="@+id/AppDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/notes_app"
            android:textAlignment="center"
            android:textColor="@color/red_color"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.054" />

        <Button
            android:id="@+id/moveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_notes"
            android:background="@drawable/btn_splashfilter_shape"
            app:backgroundTint="#731B1B"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/Developer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AppDescription" />

        <TextView
            android:id="@+id/Developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/by_n_idongesit_samuel"
            android:textColor="@color/red_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AppDescription"
            app:layout_constraintVertical_bias="0.984" />

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.constraintlayout.widget.ConstraintLayout>