<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_Color"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/filterIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/ic_filter_list"
                android:contentDescription="@string/filter_icon"/>

            <TextView
                android:id="@+id/filterHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/high"
                android:background="@drawable/btn_filter_shape"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="5dp"/>
            <TextView
                android:id="@+id/filterMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/YellowColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/medium"
                android:background="@drawable/btn_filter_shape"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/filterLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/GreenColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/low"
                android:background="@drawable/btn_filter_shape"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allNotesRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterLayout">

        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/ic_note_add"
            android:backgroundTint="@color/fabColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>